# cypher-guard

./: .gitignore  .taskmasterconfig  CHANGELOG.md  CLAUSE_ORDER_TASKS.txt  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  pyproject.toml  requirements_dev.txt  test_where.rs  transportation_qpp_example.py
.cursor/: mcp.json
.github/: pull_request_template.md
.github/.workflows/: ci.yml
.github/environments/: pypi.yml
.github/workflows/: api-docs.yml  ci.yml  generate-release-notes.yml  pr-check.yml  pr-javascript-test.yml  pr-python-test.yml  pr-rust-format.yml  pr-rust-test.yml  publish-pypi.yml  release.yml  version-bump.yml
cypher-guard/: Cargo.toml
cypher-guard/src/: lib.rs  parser.rs
data/: INGEST_README.md  ingest.py
data/csv/: README.md  company.csv  knows.csv  located_in.csv  location.csv  person.csv  works_for.csv
data/queries/valid/: advanced.yml  apoc.yml  db-ops.yml  functions.yml  gds.yml  intermediate.yml  predicates.yml  qpp.yml  simple.yml  write.yml
data/schema/: README.md  eval_schema.json
docs/: API.md  DEVELOPMENT.md  PARSER_INTERNALS.md  RELEASES.md  VERSIONING.md
eval/rust/: Cargo.toml  Makefile  README.md
eval/rust/src/: main.rs
python_bindings/: Cargo.toml
rust/cypher_guard/: Cargo.toml  test_complex_query.rs
rust/cypher_guard/src/: errors.rs  lib.rs  main.rs  parser.rs  schema.rs  validation.rs
rust/cypher_guard/src/parser/: ast.rs  clauses.rs  components.rs  mod.rs  patterns.rs  span.rs  utils.rs
rust/cypher_guard/src/parser/apoc/: functions.rs  mod.rs  types.rs
rust/cypher_guard/src/parser/apoc/procedures/: agg.rs  algo.rs  atomic.rs  bitwise.rs  coll.rs  convert.rs  create.rs  cypher.rs  data.rs  date.rs  diff.rs  export.rs  generate.rs  graph.rs  hash.rs  import.rs  json.rs  load.rs  lock.rs  log.rs  map.rs  math.rs  merge.rs  meta.rs  mod.rs  monitoring.rs  periodic.rs  refactor.rs  run.rs  scheduler.rs  schema.rs  stats.rs  systemdb.rs  text.rs  trigger.rs  util.rs  uuid.rs  xml.rs
rust/cypher_guard/src/parser/apoc_core/: mod.rs  parser.rs  types.rs
rust/cypher_guard/src/parser/apoc_core/procedures/: agg.rs  algo.rs  atomic.rs  bitwise.rs  coll.rs  convert.rs  create.rs  cypher.rs  data.rs  date.rs  diff.rs  do.rs  export.rs  generate.rs  graph.rs  hash.rs  help.rs  import.rs  json.rs  load.rs  lock.rs  log.rs  map.rs  math.rs  merge.rs  meta.rs  mod.rs  monitoring.rs  node.rs  number.rs  path.rs  periodic.rs  refactor.rs  run.rs  scheduler.rs  schema.rs  stats.rs  systemdb.rs  text.rs  trigger.rs  (+4 more)
rust/js_bindings/: Cargo.toml  eslint.config.js  index.d.ts  index.darwin-x64.node  index.js  package-lock.json  package.json  test.ts  tsconfig.json
rust/js_bindings/src/: lib.rs
rust/python_bindings/: Cargo.toml  pyproject.toml  test_debug.py  test_error_handling.py
rust/python_bindings/src/: lib.rs
rust/python_bindings/tests/: test_cypher_guard.py  test_schema.py  test_validation.py
rust/python_bindings/tests/integration/: conftest.py  test_schema_IT.py
rust/python_bindings/tests/unit/: debug_validation.py  test_debug.py  test_error_handling.py  test_parser_errors.py  test_schema.py  test_validation.py
scripts/: generate-docs.sh  prd.txt
src/: lib.rs
tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  tasks.json.bak
tests/: test_cypher.py  test_cypher_guard.py
