[workspace]
resolver = "2"
members = [
    "rust/cypher_guard",
    "rust/python_bindings",
    "rust/js_bindings",
    "eval/rust"
]

[workspace.package]
version = "2.0.0"
edition = "2021"
description = "A tool for validating Cypher queries against a Neo4j schema"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pyo3 = { version = "0.21.2", features = ["extension-module", "macros"] }
thiserror = "1.0"
nom = "7"
napi = { version = "2.14.1", features = ["napi4"] }
napi-derive = "2.14.1"

[workspace.dev-dependencies]
cargo-tarpaulin = "0.18.0"

[profile.release]
debug = 2
lto = "thin"

[profile.test.package.proptest]
opt-level = 3

[profile.test.package.rand_chacha]
opt-level = 3