[package]
name = "cypher-guard-eval"
version = "0.1.15"
edition = "2021"

[[bin]]
name = "eval"
path = "src/main.rs"

[dependencies]
cypher-guard = { path = "../../rust/cypher_guard" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
walkdir = "2.0" 