[package]
name = "cypher-guard"
version = "0.1.6"
edition = "2021"

[lib]
name = "cypher_guard"
crate-type = ["cdylib", "rlib"]

[features]
default = []
python-bindings = ["pyo3", "pyo3/extension-module"]

[dependencies]
nom.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true

[dependencies.pyo3]
workspace = true
optional = true
features = ["macros"]
