[package]
name = "cypher-guard"
version = "0.1.18"
edition = "2021"

[lib]
name = "cypher_guard"
crate-type = ["rlib"]

[[bin]]
name = "cypher_guard"
path = "src/main.rs"

[features]
default = []

[dependencies]
nom.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
