[package]
name = "cypher_guard_js_bindings"
version = "0.1.4"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.14.1", features = ["napi4"] }
napi-derive = "2.14.1"
cypher-guard = { path = "../cypher_guard" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
napi-build = "2" 