[package]
name = "cypher_guard_python_bindings"
version = "0.1.10"
edition = "2021"

[lib]
name = "cypher_guard"
crate-type = ["cdylib"]

[dependencies]
cypher-guard = { path = "../cypher_guard", features = ["python-bindings"] }
pyo3 = { workspace = true, features = ["extension-module", "macros"] }

[build-dependencies]
pyo3-build-config = "0.21.2"

[build]
rustflags = [
    "-C", "link-arg=-undefined",
    "-C", "link-arg=dynamic_lookup",
    "-C", "link-arg=-framework",
    "-C", "link-arg=CoreFoundation"
]