[package]
name = "cypher_guard_python_bindings"
version = "1.0.0"
edition = "2021"

[lib]
name = "cypher_guard_python"
crate-type = ["cdylib"]

[dependencies]
cypher-guard = { path = "../cypher_guard" }
pyo3 = { workspace = true, features = ["extension-module", "macros"] }
serde_json = "1.0"

[build-dependencies]
pyo3-build-config = "0.21.2"