[project]
name = "cypher_guard"
version = "0.1.4"
description = "Python bindings for Cypher Guard"

dependencies = []
requires-python = ">=3.9.0"

[dependency-groups]
dev = [
    "pytest>=7.0",
    "maturin>=1.4,<2.0",
    "testcontainers>=3.7",
    "neo4j>=5.0",
    "neo4j-graphrag>=1.8.0",
]

[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "src"
module-name = "cypher_guard" 
